<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="video_closemic">关闭麦克风</string>
    <string name="video_handfree">免提</string>
    <string name="video_camera_txt">摄像头</string>
    <string name="video_call_phonenum">拨打手机</string>
    <string name="video_switch_camera">切换摄像头</string>
    <string name="video_close_video">关闭画面</string>
    <string name="audio_open_camera_acc_txt">打开我的摄像头</string>
    <string name="audio_close_camera_acc_txt">关闭我的摄像头</string>
    <string name="audio_close_mic_acc_txt">关闭麦克风</string>
    <string name="audio_disable_camera_acc_txt">发起通话时暂不能打开摄像头</string>
    <string name="audio_switch_to_headset_mode_acc_txt">关闭免提</string>
    <string name="audio_switch_to_speaker_mode_acc_txt">打开免提</string>
    <string name="gaudio_close_mic_acc_txt">关闭麦克风</string>
    <string name="gaudio_open_mic_acc_txt">打开麦克风</string>
    <string name="gaudio_switch_camera_front_acc_txt">换用后置摄像头</string>
    <string name="gaudio_switch_camera_back_acc_txt">换用前置摄像头</string>
    <string name="gaudio_hangup_acc_txt">退出多人通话</string>
    <string name="gvideo_request_video_acc_txt">该好友正在视频，按下可观看该好友的视频</string>
    <string name="gvideo_request_screen_acc_txt">该好友正在屏幕分享，按下可观看该好友的屏幕分享</string>
    <string name="gvideo_play_video_acc_txt">正在播放该好友的视频</string>
    <string name="gvideo_play_screen_acc_txt">正在播放该好友的屏幕分享</string>
    <string name="gvideo_speaking_acc_txt">该好友正在语音</string>
    <string name="video_close_remote_video_acc_txt">关闭画面</string>
    <string name="qav_gaudio_waiting_text">等待大家加入</string>
    <string name="login_prefix">选择登录的测试号：</string>
    <string name="receive">接收方</string>
    <string name="empty_text">无</string>
    <string name="invite_test">接收方弹窗测试</string>
    <string name="invite_title">是否接受对方邀请</string>
    <string name="invite_refused_toast">对方拒绝接受邀请</string>
    <string name="invite_canceled_toast">对方放弃邀请</string>
    <string name="dialog_waitting_title">等待对方接受邀请</string>
    <string name="join">加入</string>
    <string name="default_room_id">72057594042791</string>
    <string name="create_room">创建房间</string>
    <string name="at_login">登录中</string>
    <string name="login_failed">登录失败</string>
    <string name="at_logout">登出中</string>
    <string name="at_create_room">创建房间中</string>
    <string name="create_room_failed">创建房间失败</string>
    <string name="at_join_room">加入房间中</string>
    <string name="at_close_room">关闭房间中</string>
    <string name="close_room_failed">关闭房间失败</string>
    <string name="login">选择测试号登录</string>
    <string name="menu">菜单</string>
    <string name="handfree_summary">开关扬声器</string>
    <string name="mic">麦克风</string>
    <string name="mic_summary">开关麦克风</string>
    <string name="camera_summary">开关摄像头</string>
    <string name="interface_initialization">界面初始化中</string>
    <string name="me">我</string>
    <string name="avendpoint_is_null">该成员已退出</string>
    <string name="error_code_prefix">错误码：</string>
    <string name="action_add">添加一条测试号</string>
    <string name="qq_prefix">昵称：</string>
    <string name="openid_prefix">identifier：</string>
    <string name="openkey_prefix">usersig：</string>
    <string name="at_on_camera">打开摄像头中</string>
    <string name="on_camera_failed">打开摄像头失败</string>
    <string name="at_off_camera">关闭摄像头中</string>
    <string name="off_camera_failed">关闭摄像头失败</string>
    <string name="at_switch_front_camera">换用前置摄像头中</string>
    <string name="switch_front_camera_failed">换用前置摄像头失败</string>
    <string name="at_switch_back_camera">换用后置摄像头中</string>
    <string name="switch_back_camera_failed">换用后置摄像头失败</string>
    <string name="room_id">房间号</string>
    <string name="at_accept">接受邀请中</string>
    <string name="accept_failed">接受邀请失败</string>
    <string name="at_invite">邀请中</string>
    <string name="invite_failed">邀请失败</string>
    <string name="at_refuse">拒绝邀请中</string>
    <string name="refuse_failed">拒绝邀请失败</string>
    <string name="join_room_failed">加入房间失败</string>
    <string name="peer_leave">对方已退出房间</string>
    
    <string name="notify_peer_camera_open">对方已开启摄像头</string>    
    <string name="notify_peer_camera_close">对方已关闭摄像头</string>  
    <string name="notify_peer_mic_open">对方已开启麦克风</string>  
    <string name="notify_peer_mic_close">对方已关闭麦克风</string>     
    
    <string name="notify_conflict">对方也在给你发邀请，请不要同时呼叫</string>        
    <string name="notify_no_network">网络无连接，请检查网络</string>        
    <string name="tips_show">打开tips</string>     
    <string name="tips_close">关闭tips</string>

    <string name="app_name">facekall</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="account">输入用户名</string>
    <string name="password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="btn_go_register">注册新用户>></string>
    <string name="btn_register">注册</string>
    <string name="btn_login">登陆</string>
    <string name="str_back">返回</string>
    <string name="recent">消息</string>
    <string name="contacts">联系人</string>
    <string name="setting">设置</string>
    <string name="text_delivered_msg">已发送</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="not_connect_to_server">链接断开</string>
    <string name="cant_find_pictures">找不到图片</string>
    <string name="File_does_not_exist">找不到文件</string>
    <string name="move_up_to_cancel">向上移动取消</string>

    <string name="code">验证码</string>
    
    <string name="mail">通讯录</string>
    <string name="video_recent">视频通话记录</string>
    <string name="message_recent">消息记录</string>
    <string name="week_recent">最近7天消息记录</string>
    <string name="video_call">视频通话</string>
    <string name="message_call">消息会话</string>
    <string name="sure">确定</string>
    <string name="pass_request">通过验证</string>
    <string name="remark">标签</string>
    <string name="new_remark">新建标签</string>
    <string name="save">保存</string>
    <string name="news_manage">消息管理</string>
    <string name="send">发送</string>
    <string name="login_problom">登录遇到问题</string>
    <string name="input_info">填写信息</string>
    <string name="submit">提交</string>
    <string name="set_password">设置密码</string>
    <string name="call_400">请致电400-8888888通过客服找回</string>
    <string name="call_custrom">致电客服</string>


</resources>