<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:id="@+id/loginScollView"
              android:background="@drawable/bg_login"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_title_bar"
        android:textColor="@color/login_text"
        android:paddingLeft="20dp"
        android:gravity="center_vertical"
        android:text="登录"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnPassword"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:background="@null"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="密码登录" />

        <Button
            android:id="@+id/btnCode"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:background="@null"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="验证码登录" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <LinearLayout
            android:id="@+id/llPhone"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/login_tv_margin_left"
            android:layout_marginRight="@dimen/login_tv_margin_left"
            android:orientation="horizontal"
            android:background="@drawable/bg_input_login"
            android:layout_height="@dimen/login_tv_height">

            <TextView
                android:id="@+id/txtPhone"
                android:layout_width="@dimen/login_input_left_width"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="手机号"
                android:textSize="20sp"
                android:textColor="@color/login_text"
                android:autoText="false"
                />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@null"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <com.falcon.facekall.login.LoginPINView
            android:id="@+id/viewPIN"
            android:layout_below="@+id/llPhone"
            android:layout_marginTop="@dimen/login_tv_margin_top"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

        <com.falcon.facekall.login.LoginPasswordView
            android:id="@+id/viewPassword"
            android:layout_below="@+id/llPhone"
            android:layout_marginTop="@dimen/login_tv_margin_top"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />
    </RelativeLayout>


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_tv_height"
        android:onClick="onClick"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="@dimen/login_tv_margin_left"
        android:layout_marginRight="@dimen/login_tv_margin_left"
        android:background="@drawable/bg_button_login"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/btn_login" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/login_tv_margin_top"
        android:layout_marginRight="@dimen/login_tv_margin_left"
        android:layout_marginLeft="@dimen/login_tv_margin_left"
        android:layout_weight="2">


        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:background="@null"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/btn_register" />

        <Button
            android:id="@+id/btnLoginError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:textSize="18sp"
            android:background="@null"
            android:textColor="@color/white"
            android:text="@string/login_problom"
            android:layout_alignParentRight="true"
        />

    </RelativeLayout>

</LinearLayout>